--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,25 @@
-group 'com.github.gregwhitaker'
-version '2.0-SNAPSHOT'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.5
-
-repositories {
-    mavenCentral()
+allprojects {
+    repositories {
+        mavenCentral()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
+    }
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+apply from: file('gradle/release.gradle')
+apply from: file('gradle/convention.gradle')
+apply from: file('gradle/codequality.gradle')
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Brixton.RELEASE"
+    }
+}
+
+subprojects {
+    dependencies {
+        testCompile('junit:junit:4.12')
+        testCompile('org.hamcrest:hamcrest-all:1.3')
+        testCompile('org.mockito:mockito-all:1.10.19')
+    }
 }
