--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,13 @@ include 'catnap-core'
 include 'catnap-springboot'
 include 'catnap-springmvc'
 include 'catnap-jaxrs'
+include 'catnap-examples'
+include 'catnap-examples:catnap-examples-springboot'
+findProject(':catnap-examples:catnap-examples-springboot')?.name = 'catnap-examples-springboot'
+include 'catnap-examples:catnap-examples-jersey'
+findProject(':catnap-examples:catnap-examples-jersey')?.name = 'catnap-examples-jersey'
+include 'catnap-examples:catnap-examples-springmvc'
+findProject(':catnap-examples:catnap-examples-springmvc')?.name = 'catnap-examples-springmvc'
+include 'catnap-examples:catnap-examples-resteasy'
+findProject(':catnap-examples:catnap-examples-resteasy')?.name = 'catnap-examples-resteasy'
 
