--- a/catnap-core/build.gradle
+++ b/catnap-core/build.gradle
@@ -3,5 +3,10 @@ apply from: file('../gradle/convention.gradle')
 apply from: file('../gradle/codequality.gradle')
 
 dependencies {
+    compile('org.slf4j:slf4j-api:1.7.21')
+    compile('org.slf4j:slf4j-log4j12:1.7.21')
 
+    testCompile('junit:junit:4.12')
+    testCompile('org.hamcrest:hamcrest-all:1.3')
+    testCompile('org.mockito:mockito-all:1.10.19')
 }
