--- a/catnap-springmvc/build.gradle
+++ b/catnap-springmvc/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile('org.springframework:spring-test')
     compile('org.slf4j:slf4j-api:1.7.21')
     compile('org.slf4j:slf4j-log4j12:1.7.21')
+    compile('commons-logging:commons-logging:1.2')
 
     testCompile('junit:junit:4.12')
     testCompile('org.hamcrest:hamcrest-all:1.3')
