--- a/catnap-jaxrs/build.gradle
+++ b/catnap-jaxrs/build.gradle
@@ -3,6 +3,9 @@ apply from: file('../gradle/convention.gradle')
 apply from: file('../gradle/codequality.gradle')
 
 dependencies {
+    compile project(':catnap-core')
+
+    compile('javax.ws.rs:jsr311-api:1.1.1')
     compile('org.slf4j:slf4j-api:1.7.21')
     compile('org.slf4j:slf4j-log4j12:1.7.21')
 
