--- a/catnap-examples/catnap-examples-springmvc/build.gradle
+++ b/catnap-examples/catnap-examples-springmvc/build.gradle
@@ -1,14 +1,16 @@
-group 'com.github.gregwhitaker'
-version '1.0.0'
-
 apply plugin: 'java'
+apply plugin: 'io.spring.dependency-management'
 
-sourceCompatibility = 1.5
+dependencyManagement {
+    imports {
+        mavenBom "io.spring.platform:platform-bom:2.0.4.RELEASE"
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-
+    compile project(":catnap-springmvc")
 }
