--- a/catnap-springmvc/build.gradle
+++ b/catnap-springmvc/build.gradle
@@ -14,11 +14,11 @@ dependencies {
     compile project(':catnap-core')
 
     compile('org.springframework:spring-webmvc')
-    compile('org.springframework:spring-test')
     compile('org.slf4j:slf4j-api:1.7.21')
     compile('org.slf4j:slf4j-log4j12:1.7.21')
     compile('commons-logging:commons-logging:1.2')
 
+    testCompile('org.springframework:spring-test')
     testCompile('junit:junit:4.12')
     testCompile('org.hamcrest:hamcrest-all:1.3')
     testCompile('org.mockito:mockito-all:1.10.19')
