Got the resteasy example working

--- a/catnap-examples/catnap-examples-resteasy/build.gradle
+++ b/catnap-examples/catnap-examples-resteasy/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     compile project(":catnap-jaxrs")
 
     compile('org.jboss.resteasy:resteasy-jaxrs:3.0.16.Final')
+    compile('org.jboss.resteasy:resteasy-jaxb-provider:3.0.16.Final')
+    compile('org.jboss.resteasy:resteasy-jackson2-provider:3.0.16.Final')
 }
 
 gretty {
