--- a/catnap-jaxrs/build.gradle
+++ b/catnap-jaxrs/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     compile project(':catnap-core')
 
     compile('javax.ws.rs:jsr311-api:1.1.1')
+    compile('com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.7.4')
     compile('org.slf4j:slf4j-api:1.7.21')
     compile('org.slf4j:slf4j-log4j12:1.7.21')
 
