--- a/catnap-examples/catnap-examples-springboot/build.gradle
+++ b/catnap-examples/catnap-examples-springboot/build.gradle
@@ -1,14 +1,24 @@
-group 'com.github.gregwhitaker'
-version '1.0.0'
-
 apply plugin: 'java'
+apply plugin: 'io.spring.dependency-management'
+apply plugin: 'spring-boot'
 
-sourceCompatibility = 1.5
+buildscript {
+    repositories {
+        mavenCentral()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
+    }
+
+    dependencies {
+        classpath('org.springframework.boot:spring-boot-gradle-plugin:1.3.0.RELEASE')
+        classpath('io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE')
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-
+    compile project(":catnap-springboot")
 }
