--- a/catnap-springboot/build.gradle
+++ b/catnap-springboot/build.gradle
@@ -2,7 +2,18 @@ apply from: file('../gradle/release.gradle')
 apply from: file('../gradle/convention.gradle')
 apply from: file('../gradle/codequality.gradle')
 
+apply plugin: 'io.spring.dependency-management'
+
+dependencyManagement {
+    imports {
+        mavenBom "io.spring.platform:platform-bom:2.0.4.RELEASE"
+    }
+}
+
 dependencies {
+    compile project(':catnap-core')
+
+    compile("org.springframework.boot:spring-boot-starter-web")
     compile('org.slf4j:slf4j-api:1.7.21')
     compile('org.slf4j:slf4j-log4j12:1.7.21')
 
