Removing spring boot

--- a/catnap-examples/catnap-examples-springboot/build.gradle
+++ b/catnap-examples/catnap-examples-springboot/build.gradle
@@ -20,5 +20,7 @@ repositories {
 }
 
 dependencies {
-    compile project(":catnap-springboot")
+    compile project(":catnap-springmvc")
+
+    compile ('org.springframework.boot:spring-boot-starter-web')
 }
