--- a/catnap-examples/catnap-examples-jersey/build.gradle
+++ b/catnap-examples/catnap-examples-jersey/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile project(":catnap-jaxrs")
 
     compile 'org.glassfish.jersey.containers:jersey-container-servlet'
-    compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.7.4'
+    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.23'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.4'
 }
 
