--- a/gradle/buildscript.gradle
+++ b/gradle/buildscript.gradle
@@ -1,4 +1,5 @@
 repositories {
+    jcenter()
     mavenCentral()
     maven { url "https://repo.spring.io/snapshot" }
     maven { url "https://repo.spring.io/milestone" }
@@ -7,5 +8,5 @@ repositories {
 dependencies {
     classpath('org.springframework.boot:spring-boot-gradle-plugin:1.3.0.RELEASE')
     classpath('io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE')
-    classpath('se.transmode.gradle:gradle-docker:1.2')
+    classpath('com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7')
 }
