Changing example imports to use the jcenter artifacts for clarity

--- a/catnap-examples/catnap-examples-resteasy/build.gradle
+++ b/catnap-examples/catnap-examples-resteasy/build.gradle
@@ -16,7 +16,7 @@ repositories {
 }
 
 dependencies {
-    compile project(":catnap-jaxrs")
+    compile 'com.github.gregwhitaker:catnap-jaxrs:2.0.0'
 
     compile('org.jboss.resteasy:resteasy-jaxrs:3.0.16.Final')
     compile('org.jboss.resteasy:resteasy-jaxb-provider:3.0.16.Final')
