--- a/catnap-examples/catnap-examples-springboot/build.gradle
+++ b/catnap-examples/catnap-examples-springboot/build.gradle
@@ -20,7 +20,7 @@ repositories {
 }
 
 dependencies {
-    compile project(":catnap-spring")
+    compile 'com.github.gregwhitaker:catnap-spring:2.0.0'
 
     compile('org.springframework.boot:spring-boot-starter-web')
 }
