Added a springboot specific module

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include 'catnap-core'
 include 'catnap-spring'
 include 'catnap-jaxrs'
 include 'catnap-examples'
+include 'catnap-springboot'
 include 'catnap-examples:catnap-examples-springboot'
 findProject(':catnap-examples:catnap-examples-springboot')?.name = 'catnap-examples-springboot'
 include 'catnap-examples:catnap-examples-jersey'
@@ -11,4 +12,3 @@ include 'catnap-examples:catnap-examples-springmvc'
 findProject(':catnap-examples:catnap-examples-springmvc')?.name = 'catnap-examples-springmvc'
 include 'catnap-examples:catnap-examples-resteasy'
 findProject(':catnap-examples:catnap-examples-resteasy')?.name = 'catnap-examples-resteasy'
-
