--- a/build.gradle
+++ b/build.gradle
@@ -34,3 +34,12 @@ project(":catnap-spring") {
         maven { url "https://repo.spring.io/milestone" }
     }
 }
+
+project(":catnap-springboot") {
+    ext.artifact = 'catnap-springboot'
+
+    repositories {
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
+    }
+}
