--- a/catnap-examples/catnap-examples-springboot/build.gradle
+++ b/catnap-examples/catnap-examples-springboot/build.gradle
@@ -20,7 +20,6 @@ repositories {
 }
 
 dependencies {
-    compile project(":catnap-springboot")
-
-    compile('org.springframework.boot:spring-boot-starter-web')
+    compile 'com.github.gregwhitaker:catnap-springboot:2.1.0'
+    compile 'org.springframework.boot:spring-boot-starter-web'
 }
