--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'catnap'
 include 'catnap-core'
 include 'catnap-spring'
 include 'catnap-jaxrs'
+include 'catnap-ratpack'
 include 'catnap-examples'
 include 'catnap-springboot'
 include 'catnap-examples:catnap-examples-springboot'
