Always publishing build scans

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ plugins {
 buildScan {
     licenseAgreementUrl = 'https://gradle.com/terms-of-service'
     licenseAgree = 'yes'
+    publishAlways()
 }
 
 allprojects {
