Added example project stub for ratpack

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,3 +13,5 @@ include 'catnap-examples:catnap-examples-springmvc'
 findProject(':catnap-examples:catnap-examples-springmvc')?.name = 'catnap-examples-springmvc'
 include 'catnap-examples:catnap-examples-resteasy'
 findProject(':catnap-examples:catnap-examples-resteasy')?.name = 'catnap-examples-resteasy'
+include 'catnap-examples:catnap-examples-ratpack'
+findProject(':catnap-examples:catnap-examples-ratpack')?.name = 'catnap-examples-ratpack'
