Added mainClassName to ratpack example

--- a/catnap-examples/catnap-examples-ratpack/build.gradle
+++ b/catnap-examples/catnap-examples-ratpack/build.gradle
@@ -17,3 +17,5 @@ repositories {
 dependencies {
     compile project(':catnap-ratpack')
 }
+
+mainClassName = 'catnap.examples.ratpack.WidgetApplication'
