Added guice to ratpack example

--- a/catnap-examples/catnap-examples-ratpack/build.gradle
+++ b/catnap-examples/catnap-examples-ratpack/build.gradle
@@ -16,6 +16,8 @@ repositories {
 
 dependencies {
     compile project(':catnap-ratpack')
+
+    compile ratpack.dependency("guice")
 }
 
 mainClassName = 'catnap.examples.ratpack.WidgetApplication'
