Got the ratpack example running without catnap support

--- a/catnap-examples/catnap-examples-ratpack/build.gradle
+++ b/catnap-examples/catnap-examples-ratpack/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile project(':catnap-ratpack')
 
     compile ratpack.dependency("guice")
+    runtime 'org.slf4j:slf4j-simple:1.7.10'
 }
 
 mainClassName = 'catnap.examples.ratpack.WidgetApplication'
