Updated to Gradle 3.3 and pinned Gretty version

--- a/catnap-examples/catnap-examples-resteasy/build.gradle
+++ b/catnap-examples/catnap-examples-resteasy/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.akhikhl.gretty:gretty:+'
+        classpath 'org.akhikhl.gretty:gretty:1.2.4'
     }
 }
 
