--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,13 @@ buildscript {
 }
 
 plugins {
-    id 'com.gradle.build-scan' version '1.3'
+    id 'com.gradle.build-scan' version '1.4'
 }
 
 buildScan {
     licenseAgreementUrl = 'https://gradle.com/terms-of-service'
     licenseAgree = 'yes'
+    publishAlways()
 }
 
 allprojects {
