--- a/catnap-examples/catnap-examples-jersey/build.gradle
+++ b/catnap-examples/catnap-examples-jersey/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.akhikhl.gretty:gretty:+'
+        classpath 'org.akhikhl.gretty:gretty:1.2.4'
     }
 }
 
