--- a/catnap-examples/catnap-examples-springboot/build.gradle
+++ b/catnap-examples/catnap-examples-springboot/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'java'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
 buildscript {
     repositories {
+        mavenLocal()
         mavenCentral()
         maven { url "https://repo.spring.io/snapshot" }
         maven { url "https://repo.spring.io/milestone" }
@@ -20,6 +21,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.github.gregwhitaker:catnap-springboot:2.1.0'
+    //compile 'com.github.gregwhitaker:catnap-springboot:2.1.0'
+    compile project(':catnap-springboot')
     compile 'org.springframework.boot:spring-boot-starter-web'
 }
