--- a/catnap-examples/catnap-examples-springboot/build.gradle
+++ b/catnap-examples/catnap-examples-springboot/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'org.springframework.boot'
 
 buildscript {
     repositories {
-        mavenLocal()
+        jcenter()
         mavenCentral()
         maven { url "https://repo.spring.io/snapshot" }
         maven { url "https://repo.spring.io/milestone" }
