--- a/catnap-examples/catnap-examples-springmvc/build.gradle
+++ b/catnap-examples/catnap-examples-springmvc/build.gradle
@@ -19,11 +19,13 @@ buildscript {
 }
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
-    compile 'com.github.gregwhitaker:catnap-spring:2.1.0'
+    //compile 'com.github.gregwhitaker:catnap-spring:2.1.0'
+    compile project(':catnap-spring')
 }
 
 gretty {
