Incrementing to next version number

--- a/catnap-examples/catnap-examples-springboot/build.gradle
+++ b/catnap-examples/catnap-examples-springboot/build.gradle
@@ -21,7 +21,6 @@ repositories {
 }
 
 dependencies {
-    //compile 'com.github.gregwhitaker:catnap-springboot:2.1.0'
-    compile project(':catnap-springboot')
+    compile 'com.github.gregwhitaker:catnap-springboot:2.2.0'
     compile 'org.springframework.boot:spring-boot-starter-web'
 }
