--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,13 @@ buildscript {
 }
 
 plugins {
-    id 'com.gradle.build-scan' version '1.15.2'
+    id "com.gradle.build-scan" version "3.0"
 }
 
 buildScan {
-    licenseAgreementUrl = 'https://gradle.com/terms-of-service'
-    licenseAgree = 'yes'
-    publishAlways()
+    termsOfServiceUrl = "https://gradle.com/terms-of-service"
+    termsOfServiceAgree = "yes"
+    publishOnFailure()
 }
 
 allprojects {
