--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,6 @@ include 'catnap-examples:catnap-examples-springmvc'
 findProject(':catnap-examples:catnap-examples-springmvc')?.name = 'catnap-examples-springmvc'
 include 'catnap-examples:catnap-examples-resteasy'
 findProject(':catnap-examples:catnap-examples-resteasy')?.name = 'catnap-examples-resteasy'
+include 'catnap-website'
+include 'catnap-docs'
+
