Improve GRADLE build Performance

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ buildScan {
 }
 
 allprojects {
+    tasks.withType(JavaCompile).configureEach {
+        options.incremental = true
+    }
+
     repositories {
         jcenter()
         mavenCentral()
